--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 </head>
 <body>
 
-<h1>טבלת נקודות</h1>
+<h1>נקודות לירי</h1>
 <div id="container"></div>
 
 <div id="addForm">
   <div style="display:flex; flex-direction:column; gap:10px;">
     <input id="newName" type="text" placeholder="שם החבר" />
-    <input id="newPoints" type="number" placeholder="נקודות (ברירת מחדל: 1)" />
+    <input id="newPoints" type="number" placeholder="נקודות" />
     <button onclick="addFriend()">הוסף חבר</button>
   </div>
 </div>
