--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -199,7 +199,7 @@
   <div class="input-group">
     <input id="newName" type="text" placeholder="שם החבר/ה" autocomplete="off" />
     <input id="newPoints" type="number" placeholder="ניקוד התחלתי" />
-    <button class="add-btn" onclick="addFriend()">הוסף לרשימה ✨</button>
+    <button class="add-btn" onclick="addFriend()">הוסף לרשימה</button>
   </div>
 </div>
 
